# itmo-gamedev-algorithms

./: .gitignore  CMakeLists.txt  README.md  w_build_vs19.bat  w_build_vs22.bat
dynamic_array/: Array.h  ArrayTest.cpp  CMakeLists.txt
hammurabi/: CMakeLists.txt  main.cpp
quicksort/: CMakeLists.txt  QuickSort.h
tests/: ArrayTest.cpp  CMakeLists.txt  QuickSortTest.cpp
